// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Determines Chunk Types should detect a Emote type 1`] = `
Object {
  "content": "someEmote",
  "meta": Object {
    "emoteId": "emotesv2_63f57029a4a94135b4013b73610ca192",
    "uri": "https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_63f57029a4a94135b4013b73610ca192/default/dark/3.0",
  },
  "type": "emote",
}
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Determines Chunk Types should detect a URI type 1`] = `
Object {
  "content": "someUrl",
  "type": "uri",
}
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Determines Emote Ranges should extract Emotes into sorted order 1`] = `
Array [
  Object {
    "emoteId": "306340318",
    "end": 9,
    "start": 0,
  },
  Object {
    "emoteId": "emotesv2_63f57029a4a94135b4013b73610ca192",
    "end": 25,
    "start": 11,
  },
  Object {
    "emoteId": "emotesv2_7c4aed2ad1a047d584ea282d37f65a68",
    "end": 34,
    "start": 27,
  },
  Object {
    "emoteId": "emotesv2_bb24357392fa4d7c905309fb27402ea4",
    "end": 46,
    "start": 36,
  },
  Object {
    "emoteId": "emotesv2_76f0794a7be343daa2f4d571861a9a3e",
    "end": 58,
    "start": 48,
  },
  Object {
    "emoteId": "1003187",
    "end": 69,
    "start": 60,
  },
  Object {
    "emoteId": "1003189",
    "end": 80,
    "start": 71,
  },
]
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Determines Emote Ranges should extract Emotes into sorted order 2`] = `
Object {
  "emoteId": "306340318",
  "end": 9,
  "start": 0,
}
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Determines URI Ranges Finds Complex URIs 1`] = `
Array [
  Object {
    "end": 177,
    "start": 9,
    "uri": "https://www.amazon.com/LEGO-Classic-Large-Creative-Brick/dp/B00NHQF6MG/ref=sr_1_2?crid=19YPHSXDE0E0R&keywords=lego+kit&qid=1649711414&sprefix=lego+kit%2Caps%2C100&sr=8-2",
  },
]
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Extracts Username & Roles should extract the subscriber role 1`] = `
Object {
  "roles": Array [
    "subscriber",
  ],
  "userName": "fakeUser",
}
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Extracts Username & Roles should extract the username 1`] = `
Object {
  "roles": Array [
    "mod",
  ],
  "userName": "fakeUser",
}
`;

exports[`Twitch Chat: Normalizer - UserChatMessageNormalizer Normalizing should return the standard data structure format 1`] = `
Object {
  "normalizedData": Object {
    "messageBuffers": undefined,
    "messageId": undefined,
    "roles": Array [],
    "userId": undefined,
    "userName": "mockUser",
  },
  "timestamp": NaN,
}
`;
